<resources>
    <string name="app_name">CarAssistant</string>

    <!--PASEK NAWIGACJI-->
    <string name="nav_bar_parking">Parking</string>
    <string name="nav_bar_history">Historia</string>
    <string name="nav_bar_user">Profil</string>

    <!--REJESTRACJA-->
    <string name="register_welcome_header">Witaj</string>
    <string name="register_header">Zarejestruj się</string>
    <string name="register_email">E-mail</string>
    <string name="register_password">Hasło</string>
    <string name="register_repeat_password">Powtórz hasło</string>
    <string name="register_button">Zarejestruj</string>
    <string name="register_login_button">Posiadasz już konto?</string>

    <!--WALIDACJA REJESTRACJI-->
    <string name="register_error_empty_email">Pole nie może być puste</string>
    <string name="register_error_incorrect_email">Niepoprawny adres e-mail</string>
    <string name="register_error_existing_email">Podany adres e-mail już istnieje</string>
    <string name="register_error_short_password">Hasło musi zawierać co najmniej 8 znaków</string>
    <string name="register_error_different_password">Podane hasła są inne</string>

    <!--NOWY UŻYTKOWNIK-->
    <string name="new_user_welcome_header">Uzupełnij dane</string>
    <string name="new_user">Użytkownik</string>
    <string name="new_user_name">Nazwa użytkownika</string>
    <string name="new_user_car">Samochód</string>
    <string name="new_user_car_brand">Marka</string>
    <string name="new_user_car_model">Model</string>
    <string name="new_user_car_registration_number">Numer rejestracyjny</string>
    <string name="new_user_car_year">Rocznik</string>
    <string name="new_user_car_mileage">Przebieg</string>
    <string name="new_user_confirm_button">Dalej</string>

    <!--WALIDACJA DANYCH UŻYTKOWNIKA-->
    <string name="new_user_error_empty">Pole nie może być puste</string>
    <string name="new_user_error_year">Podany rok jest niepoprawny</string>
    <string name="new_user_error_mileage">Podany przebieg jest niepoprawny</string>
    <string name="new_user_created">Pomyślnie utworzono konto</string>
    <string name="new_user_data_added">Dodano dane użytkownika</string>
    <string name="new_user_error">Błąd:</string>
    <string name="new_user_success">Sukces!</string>

    <!--LOGOWANIE-->
    <string name="login_welcome_header">Witaj ponownie</string>
    <string name="login_header">Zaloguj się</string>
    <string name="login_email">E-mail</string>
    <string name="login_password">Hasło</string>
    <string name="login_button">Zaloguj</string>
    <string name="login_forgot_button">Nie pamiętasz hasła?</string>
    <string name="login_register_button">Utwórz nowe konto</string>
    <string name="login_success">Zalogowano pomyślnie</string>

    <!--RESET HASLA-->
    <string name="reset_password_header">Reset hasła</string>
    <string name="reset_password_message">Wpisz adres e-mail</string>
    <string name="reset_password_email">E-mail</string>
    <string name="reset_password_button">Reset</string>
    <string name="reset_password_sent">Link resetujący hasło został wysłany na podany adres e-mail</string>
    <string name="reset_password_error_email">Podany e-mail nie istnieje w bazie</string>

    <!--WYLOGOWANIE-->
    <string name="logout_button">Wyloguj</string>

    <!--UŻYTKOWNIK-->
    <string name="user_edit_profile">Edytuj</string>
    <string name="user_logout">Wyloguj</string>
    <string name="user_name">Użytkownik</string>
    <string name="user_car_brand">Marka</string>
    <string name="user_car_model">Model</string>
    <string name="user_car_year">Rocznik</string>
    <string name="user_car_registration_number">Rejestracja</string>
    <string name="user_car_mileage">Przebieg</string>
    <string name="user_car_avg_fuel_consumption_header">Średnie spalanie</string>
    <string name="user_car_avg_fuel_consumption">Spalanie</string>
    <string name="user_photo_added">Dodano zdjęcie użytkownika</string>

    <!--EDYCJA DANYCH UŻYTKOWNIKA-->
    <string name="edit_user_header">Edytuj dane</string>
    <string name="edit_user_save_button">Zapisz</string>
    <string name="edit_change_password_button">Zmiana hasła</string>
    <string name="edit_user_updated">Dane użytkownika zostały zaktualizowane</string>

    <!--ZMIANA HASLA-->
    <string name="change_password_header">Zmiana hasła</string>
    <string name="change_password_message">Wpisz stare hasło</string>
    <string name="change_password_old_password">Stare hasło</string>
    <string name="change_password_button">Zmień</string>
    <string name="change_password_sent">Link resetujący hasło został wysłany na adres e-mail</string>
    <string name="change_password_error_password">Podane hasło jest błędne:</string>

    <!--NOWE TANKOWANIE-->
    <string name="new_refueling_header">Tankowanie</string>
    <string name="new_refueling_date">Data</string>
    <string name="new_refueling_time">Godzina</string>
    <string name="new_refueling_mileage">Przebieg</string>
    <string name="new_refueling_price_liter">Cena / L</string>
    <string name="new_refueling_cost">Koszt</string>
    <string name="new_refueling_liters">Litrów</string>
    <string name="new_refueling_save_button">Dodaj</string>
    <string name="new_refueling_created">Pomyślnie dodano tankowanie</string>
    <string name="new_refueling_date_error">Błędna data lub format daty (DD/MM/YYYY)</string>
    <string name="new_refueling_time_error">Błędna godzina lub błędny format godziny (HH:MM)</string>
    <string name="new_refueling_price_liters_error">Błędny format (NNNN.NN)</string>
    <string name="new_refueling_compare_error">Przebieg nie może być mniejszy od aktualnego</string>
    <string name="new_refueling_avg_error">Nie udało się zaktualizować średniego spalania samochodu</string>

    <!--TANKOWANIE ITEM-->
    <string name="refueling_date_time">Data i godzina</string>
    <string name="refueling_mileage">Przebieg</string>
    <string name="refueling_liters">Litrów</string>
    <string name="refueling_cost">Koszt</string>
    <string name="refueling_price_liter">Cena / litr</string>
    <string name="refueling_avg_fuel_consumption">Spalanie</string>
    <string name="refueling_clear_all">Wyczyść historię tankowań</string>

    <!--EDYCJA ITEMU TANKOWANIA-->
    <string name="edit_refueling_save_button">Zapisz</string>
    <string name="edit_refueling">Edycja</string>
    <string name="edit_refueling_updated">Dane tankowania zostały zaktualizowane</string>

    <!--USUWANIE TANKOWANIA-->
    <string name="history_delete_header">Usuwanie tankowania</string>
    <string name="history_delete_message">Czy chcesz usunąć dane tego tankowania?</string>
    <string name="history_delete_button">Usuń</string>
    <string name="history_cancel_button">Anuluj</string>
    <string name="history_deleted">Dane tankowania zostały usunięte</string>

    <!--POGODA-->
    <string name="weather_search">Wyszukaj</string>
    <string name="weather_clear">Wyczyść wyszukiwanie</string>
    <string name="weather_city">Miasto</string>
    <string name="weather_temperature_placeholder">- °C</string>
    <string name="weather_pressure">Ciśnienie</string>
    <string name="weather_pressure_placeholder">- hPa</string>
    <string name="weather_humidity">Wilgotność</string>
    <string name="weather_humidity_placeholder">- %</string>
    <string name="weather_city_edit">Zmień miasto</string>
    <string name="weather_loaded">Pobrano dane o pogodzie dla lokalizacji</string>
    <string name="weather_error">Nie udało się pobrać danych o pogodzie</string>
    <string name="weather_location_error">Włącz lokalizację zby pobrać dane o pogodzie</string>

    <!--YOUTUBE-->
    <string name="youtube_player_button">Wideo</string>
    <string name="youtube_video_title">Zobacz ile NAPRAWDĘ kosztuje litr paliwa <br /> (i ile zarabia stacja)</string>
    <string name="youtube_app_error">Brak zainstalowanej aplikacji YouTube</string>
    <string name="youtube_recommended_channels">Inne polecane kanały motoryzacyjne:</string>
    <string name="channel_motodoradca">Moto Doradca</string>
    <string name="channel_kickster">KicksterTV</string>

    <!--GŁÓWNA-->
    <string name="youtube_button_header">Film</string>
    <string name="youtube_button_title">Co składa się na cenę paliwa?</string>
    <string name="youtube_button_click">Kliknij aby obejrzeć materiał</string>
    <string name="news_header">Wiadomości</string>
    <string name="news_title">Nowe przepisy 2021!</string>
    <string name="news_click">Kliknij aby poznać szczegóły</string>
    <string name="news_text1">- pierwszeństwo pieszych na przejściach,</string>
    <string name="news_text2">- zakaz korzystania z telefonów podczas przechodzenia przez jezdnię,</string>
    <string name="news_text3">- koniec z „jazdą na zderzaku”.</string>


</resources>